maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:8: error: ';' expected but '[' found.
        return [xb;yb]
               ^JediEscaper:8: error: ';' expected but ']' found.
        return [xb;yb]
                     ^